Support web worker in demo

--- a/demo.html
+++ b/demo.html
@@ -238,8 +238,8 @@
                 <td><input name="fieldMapping" id="config-fieldMapping" type="text"/></td>
             </tr>
             <tr>
-                <td><label for="config-ignoreErrors">Ignore Errors</label></td>
-                <td><input name="ignoreErrors" id="config-ignoreErrors" type="checkbox"/></td>
+                <td><label for="config-worker">Use WebWorker</label></td>
+                <td><input name="worker" id="config-worker" type="checkbox"/></td>
             </tr>
             </tbody>
         </table>
