Fixed issues with auto detection

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,12 @@
             color       : #4b6584;
         }
 
+        img {
+            display: block;
+            margin: 0 auto 15px;
+            width: 256px;
+        }
+
         table {
             border-spacing  : 0;
             border-collapse : collapse;
@@ -122,6 +128,7 @@
 
 <h1>Welcome to CSV Hero</h1>
 <p>
+    <img src="CsvHero.svg" alt="">
     CSV Hero will save your day when you need to handle any kind of CSV file in your project!
     Feel free to try it out below.
 </p>
