Added readme page

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Csv Hero Demo</title>
-    <script src="dist/csv-hero.js"></script>
+    <script src="../dist/csv-hero.js"></script>
     <style>
         body {
             max-width   : 960px;
@@ -129,7 +129,7 @@
 <h1>Welcome to CSV Hero</h1>
 <p>
     <img src="CsvHero.svg" alt="">
-    CSV Hero will save your day when you need to handle any kind of CSV file in your project!
+    CSV Hero will save your day and handle all the CSV files you have to parse!
     <br>CSV Hero can parse your csv files even when no one else can.
     <br>Feel free to try it out below.
 </p>
@@ -187,11 +187,11 @@
             </tr>
             <tr>
                 <td><label for="config-quotes">Quote character</label></td>
-                <td><input name="quotes" id="config-quotes" value="&quot;"/></td>
+                <td><input name="quotes" id="config-quotes" value="auto"/></td>
             </tr>
             <tr>
                 <td><label for="config-escape">Escape character</label></td>
-                <td><input name="escape" id="config-escape" value="&quot;"/></td>
+                <td><input name="escape" id="config-escape" value="auto"/></td>
             </tr>
             <tr>
                 <td><label for="config-comment">Comment character</label></td>
